fixed card overflow issue

--- a/src/styles/center-styles.scss
+++ b/src/styles/center-styles.scss
@@ -17,6 +17,7 @@
   text-align: center;
   transition: 0.5s ease;
   margin: 30px;
+  overflow: hidden;
 }
 .card-image {
   grid-area: image;
